--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="profile-card__cnt js-profile-cnt">
-      <div class="profile-card__name">Muhammed Erdem</div>
-      <div class="profile-card__txt">Front-end Developer from <strong>Mesopotamia</strong></div>
+      <div class="profile-card__name">Muhammed Infas Mk </div>
+      <div class="profile-card__txt"> Passionate Developer from <strong>India</strong></div>
       <div class="profile-card-loc">
         <span class="profile-card-loc__icon">
           <svg class="icon"><use xlink:href="#icon-location"></use></svg>
@@ -98,7 +98,10 @@
 
       <div class="profile-card-ctr">
         <button class="profile-card__button button--blue js-message-btn">Message</button>
-        <button class="profile-card__button button--orange">Follow</button>
+        <button href="https://codepen.io/JavaScriptJunkie" class="profile-card__button button--orange">Follow</button>
+        
+<a href="http://www.facebook.com/codingandstuff" class="profile-card__button button--orange" target="_blank">Button</a>
+
       </div>
     </div>
 
