--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
         </a>
 
       </div>
+      <div class="container"
+  <div class="row">
+    <div class="col">
+      <a aria-label="telegram" href="#" class="btn btn-social btn-telegram btn-round btn-icon-only"><i class="fa fa-fw fa-telegram"></i></a>
+      <a aria-label="whatsapp" href="#" class="btn btn-social btn-whatsapp btn-round btn-icon-only"><i class="fa fa-fw fa-whatsapp"></i></a>
+    </div>
 
       <div class="profile-card-ctr">
         <button class="profile-card__button button--blue js-message-btn">Message</button>
