--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
@@ -58,7 +58,7 @@
           </span>
         </a>
 
-        <a href="https://twitter.com/iaMuhammedErdem" class="profile-card-social__item twitter" target="_blank">
+        <a href="https://twitter.com/iaMuhammedErdem" class="profile-card-social__item whatsapp" target="_blank">
           <span class="icon-font">
               <svg class="icon"><use xlink:href="#icon-twitter"></use></svg>
           </span>
@@ -82,13 +82,13 @@
           </span>
         </a>
 
-        <a href="https://codepen.io/JavaScriptJunkie" class="profile-card-social__item codepen" target="_blank">
+        <a href="https://codepen.io/JavaScriptJunkie" class="profile-card-social__item telegram" target="_blank">
           <span class="icon-font">
               <svg class="icon"><use xlink:href="#icon-codepen"></use></svg>
           </span>
         </a>
 
-        <a href="http://muhammederdem.com.tr/" class="profile-card-social__item link" target="_blank">
+        <a href="http://muhammederdem.com.tr/" class="profile-card-social__item youtube" target="_blank">
           <span class="icon-font">
               <svg class="icon"><use xlink:href="#icon-link"></use></svg>
           </span>
